--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,58 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity android:name=".CreateSessionActivity"
+                  android:exported ="true"/>
+
+        <activity android:name=".UserFrontpage"
+                  android:exported ="true"/>
+
+        <activity android:name =".Chapter1Activity"
+                  android:exported = "true"/>
+
+        <activity android:name=".Chapter1resultActivity"
+                  android:exported = "true" />
+
+        <activity android:name=".Chapter2Activity"
+                  android:exported ="true" />
+        <activity android:name=".Chapter2resultActivity"
+                  android:exported = "true" />
+
+        <activity android:name=".Chapter3Activity"
+                  android:exported = "true"/>
+
+
+        <activity android:name=".Chapter3resultActivity"
+                  android:exported="true"/>
+
+        <activity android:name=".Chapter4Activity"
+                  android:exported = "true"/>
+
+
+        <activity android:name=".Chapter4resultActivity"
+                  android:exported="true"/>
+
+        <activity android:name=".Chapter5Activity"
+                  android:exported = "true"/>
+
+
+        <activity android:name=".Chapter5resultActivity"
+                  android:exported="true"/>
+
+        <activity android:name=".Chapter6Activity"
+            android:exported = "true"/>
+
+
+        <activity android:name=".Chapter6resultActivity"
+            android:exported="true"/>
+
+        <activity android:name=".Chapter7Activity"
+                  android:exported = "true"/>
+        <activity android:name=".Chapter7resultActivity"
+                  android:exported="true"/>
+
+
     </application>
 
 </manifest>
