Add final output frame + Modify structure name

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -97,6 +97,10 @@
             android:name=".ChangePasswordActivity"
             android:exported="true" />
 
+        <activity
+            android:name=".FinalOutputActivity"
+            android:exported="true" />
+
     </application>
 
 </manifest>
