--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -101,6 +101,10 @@
             android:name=".FinalOutputActivity"
             android:exported="true" />
 
+        <activity
+            android:name=".EditProfileActivity"
+            android:exported="true" />
+
     </application>
 
 </manifest>
